<resources>
    <string name="app_name">IFIX</string>
    <string name="title_activity_login">Login</string>

    <!-- STRINGS RELACIONADAS AO LOGIN -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este endereço de email é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta, minimo 6 caracteres</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"As permissões de contatos são necessárias para fornecer conclusões de email."</string>
    <string name="title_activity_home"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IFIX Aplicativo</string>
    <string name="nav_header_subtitle">ifix.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_title_solicitacao">Dados da solicitação</string>

    <!-- STRINGS RELACIONADAS AOS CARDS -->

    <string name="text_status">Em aberto</string>
    <string name="text_departamento">Departamento: </string>
    <string name="text_setor">Setor: </string>
    <string name="text_equipmento">Equipamento</string>
    <string name="text_atendente">Atendente: </string>


    <string name="text_subject_matter">Assunto</string>
    <string name="button_save">Salvar</string>
    <string name="text_description">Descrição: </string>
    <string name="text_usuario">Dados do usuário</string>
    <string name="user_name">Nome</string>
    <string name="user_password_confirmation">Confirme a senha</string>
    <string name="action_login">Login</string>

    <!-- STRINGS AOS FRAGMENTOS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_motivo">Motivo</string>

    <string-array name="departments_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
