<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:clipToPadding="false"
        android:clipChildren="false"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="false"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:id="@+id/visa">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--<ImageView-->
                    <!--android:id="@+id/rightmark2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginTop="1dp"-->
                    <!--android:src="@drawable/ic_right" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="25dp"
                    android:layout_gravity="center"
                    android:hint="@string/text_status"
                    android:textSize="16dp" />

                <customfonts.MyTextView_Roboto_Light
                    android:id="@+id/atualizacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingLeft="25dp"
                    android:text="ÚLTIMA \n ATUALIZAÇÃO"
                    android:textSize="7dp" />


                <customfonts.MyTextView_Roboto_Regular
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:paddingLeft="13dp"
                    android:text="24/08"
                    android:textSize="16dp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                card_view:srcCompat="@android:drawable/divider_horizontal_textfield" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <customfonts.MyTextView_Roboto_Regular
                    android:id="@+id/departamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:hint="@string/text_departamento"
                    android:textSize="16dp" />
                <TextView
                    android:id="@+id/list_name_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <customfonts.MyTextView_Roboto_Medium
                    android:id="@+id/setor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:hint="@string/text_setor"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/list_name_sector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="3"
                    android:paddingLeft="13dp"
                    android:text="ATENDENTE:"
                    android:textSize="8dp" />

                <customfonts.MyTextView_Roboto_Regular
                    android:id="@+id/atendente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="3"
                    android:paddingLeft="13dp"
                    android:hint="@string/text_atendente"
                    android:textSize="8dp" />

            </LinearLayout>

            <customfonts.MyTextView_Roboto_Regular
                android:id="@+id/equipamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:hint="@string/text_equipmento"
                android:textSize="16dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>