<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login1Activity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="97dp"
            android:layout_height="142dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="LOGO"
            android:src="@drawable/mainlogo" />


        <custom_font.MyTextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:text="Cadastrar"
            android:textColor="#000000" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_above="@+id/signUp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/card1" />

                <ImageView
                    android:layout_width="283dp"
                    android:layout_height="62dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/group1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:letterSpacing="0.1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColorHint="#aeb0a5"
                        android:textSize="15dp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"></LinearLayout>

                    <AutoCompleteTextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:letterSpacing="0.1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColorHint="#aeb0a5"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"></LinearLayout>
                </LinearLayout>
                <AutoCompleteTextView
                    android:id="@+id/action_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/action_register"
                    android:letterSpacing="0.1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:textSize="15dp" />

            </RelativeLayout>

        </FrameLayout>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_above="@+id/signUp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/sig" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>