<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/frame_home"
            android:contentDescription="LOGO"
            android:src="@drawable/mainlogo" />


        <custom_font.MyTextView
            android:id="@+id/create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="Você é novo? Cadastre-se"
            android:textColor="#000000" />


        <FrameLayout
            android:id="@+id/frame_login"
            android:layout_width="match_parent"
            android:layout_height="378dp"
            android:layout_above="@+id/create_user"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/card1" />

                <ImageView
                    android:layout_width="283dp"
                    android:layout_height="62dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/group1" />

                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:letterSpacing="0.1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColorHint="#aeb0a5"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"></LinearLayout>

                    <AutoCompleteTextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:letterSpacing="0.1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColorHint="#aeb0a5"
                        android:layout_marginTop="10dp"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"></LinearLayout>
                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/action_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/action_login"
                    android:letterSpacing="0.1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColorHint="#aeb0a5"
                    android:textSize="15dp" />

            </RelativeLayout>

        </FrameLayout>

        <ImageView
            android:id="@+id/email_sign_in_button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_above="@+id/create_user"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/sig" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>